k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: kkrish7/kkrish-wisecow:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4499
        livenessProbe:
          tcpSocket:
            port: 4499
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 4499
          initialDelaySeconds: 5
          periodSeconds: 10
